--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "firebase": "^8.1.1",
-    "next": "10.0.3",
+    "next": "^10.0.3",
     "nextjs-progressbar": "0.0.7",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
