adoption from ww and metamata

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,12 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# firebase
+.firebase
+
 # vercel
 .vercel
 node_modules
 .vscode/settings.json
-next.config.js
+firebase-debug.log
+ui-debug.log
