--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 7050",
+    "dev": "next dev -p 7020",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "production": "next build && next start",
+    "export": "next export"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.1",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "axios": "^0.21.1",
     "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.2",
+    "framer-motion": "^3.2.2-rc.1",
     "next": "^10.0.3",
     "nextjs-progressbar": "0.0.7",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "use-resizing": "^2.1.5",
+    "uuid": "^8.3.2"
   }
 }
